# lymbe-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatView.tsx  MessageInput.tsx  MessageList.tsx  SettingsDialog.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useTheme.ts  useUpdater.ts
src/lib/: api.ts  storage.ts  types.ts
tools/: generate-icons.mjs
