[package]
name = "lymbe-desktop"
version = "0.1.0"
description = "Lymbe AI Desktop"
authors = ["Lymbe AI"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lymbe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default `custom-protocol` is enabled by Tauri's bundling logic in release
# builds — required so the asset:// scheme works in the packaged app.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
